# rcf3

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-Apache  LICENSE-MIT  README.md  cliff.toml  noxfile.py  pyproject.toml  zensical.toml
.github/: dependabot.yaml
.github/workflows/: bencher.yaml  docs.yaml  precommit.yaml  release.yaml  test-python.yaml  test-rust.yaml
benches/: comparison_bench.rs  featuresketch_bench.rs  forest_bench.rs  mstream_bench.rs
docs/: README.md  forest.md  index.md  mstream.md  onlineiforest.md
docs/featuresketch/: index.md  research.md
python/rcf3/: __init__.py  rcf3.pyi
research/: featuresketch.md
src/: bounding_box.rs  config.rs  cut.rs  error.rs  forest.rs  lib.rs  math.rs  math_utils.rs  node_arena.rs  point_store.rs  python.rs  pyutil.rs  sampler.rs  score.rs  tree.rs
src/featuresketch/: chain.rs  config.rs  detector.rs  input.rs  mod.rs  projection.rs  python.rs  sketch.rs
src/mstream/: clock.rs  config.rs  detector.rs  math.rs  mod.rs  normalization.rs  python.rs  scoring.rs  sketch.rs
src/onlineiforest/: config.rs  detector.rs  mod.rs  node.rs  python.rs  tree.rs
src/rcf/: bounding_box.rs  config.rs  cut.rs  forest.rs  mod.rs  node_arena.rs  point_store.rs  python.rs  sampler.rs  score.rs  tree.rs
src/rcf/forest/: impute.rs  mod.rs  query.rs  tests.rs  update.rs
src/rcf/tree/: mod.rs  mutation.rs  traversal.rs
tests/: docs_examples.rs  docs_examples_test.py  featuresketch_simulation.rs  featuresketch_test.py  forest_test.py  forest_test.rs  mstream_simulation.rs  mstream_test.py  onlineiforest_simulation.rs  onlineiforest_test.py  onlineiforest_test.rs  proptest_suite.rs  public_api_surface.rs  readme_examples.rs  readme_examples_test.py
