[package]
name = "rcf3"
version = "0.4.0"
edition = "2024"
description = "A Rust implementation of the Random Cut Forest algorithm for anomaly detection."
readme = "README.md"
repository = "https://github.com/Bing-su/rcf3"
license = "MIT OR Apache-2.0"
keywords = [
  "anomaly",
  "anomaly-detection",
  "machine-learning",
  "mstream",
  "online-isolation-forest",
  "random-cut-forest",
]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
name = "rcf3"

[[test]]
name = "docs_examples"
path = "tests/docs_examples.rs"
required-features = ["std"]

[[test]]
name = "forest_test"
path = "tests/forest_test.rs"
required-features = ["std"]

[[test]]
name = "mstream_simulation"
path = "tests/mstream_simulation.rs"
required-features = ["std"]

[[test]]
name = "onlineiforest_simulation"
path = "tests/onlineiforest_simulation.rs"
required-features = ["std"]

[[bench]]
harness = false
name = "forest_bench"

[[bench]]
harness = false
name = "mstream_bench"

[[bench]]
harness = false
name = "comparison_bench"

[dependencies]
ahash = {
  version = "0.8",
  default-features = false,
  features = ["runtime-rng"]
}
itertools = {
  version = "0.14",
  default-features = false,
  features = ["use_alloc"]
}
libm = "0.2"
ndarray = { version = "0.17", default-features = false }
pyo3 = {
  version = "0.28",
  features = ["extension-module", "generate-import-lib"],
  optional = true
}
rand = { version = "0.10", default-features = false, features = ["sys_rng"] }
rand_distr = { version = "0.6", default-features = false }
serde = {
  version = "1",
  default-features = false,
  features = ["alloc", "derive"],
  optional = true
}
serde_json = {
  version = "1",
  default-features = false,
  features = ["alloc"],
  optional = true
}
thiserror = { version = "2", default-features = false }

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }
fake = { version = "5.1", features = ["derive"] }
proptest = "1.11"
rstest = "0.26"
tempfile = "3"

[features]
default = ["serde", "std"]
python = ["dep:pyo3", "serde", "std"]
serde = ["dep:serde", "dep:serde_json", "ndarray/serde", "rand/serde"]
std = []

[profile.release]
strip = true
lto = true
codegen-units = 1
