[project]
name = "arcf"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FAST",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S101"]
