[project]
name = "rcf3"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Rust",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []
dynamic = ["description", "keywords", "license", "readme", "urls", "version"]

[project.optional-dependencies]
test = ["hypothesis[pytest]", "pytest-pretty"]

[dependency-groups]
dev = ["nox"]
docs = ["zensical"]

[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[tool.maturin]
auditwheel = "repair"
features = [
  "python",
  { feature = "pyo3/abi3-py311", python-version = ">=3.11" }
]
profile = "release"
python-source = "python"
strip = true

[tool.ruff.lint]
select = [
  "A",
  "B",
  "C4",
  "C90",
  "E",
  "EM",
  "F",
  "FA",
  "FAST",
  "FBT",
  "FURB",
  "I001",
  "ISC",
  "N",
  "PD",
  "PERF",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "RET",
  "RUF",
  "S",
  "SIM",
  "T20",
  "TC",
  "TRY",
  "UP",
  "W",
]
ignore = ["B905", "E501", "FBT001"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"*test*.py" = ["S101", "PLR2004"]
"tests/docs_examples_test.py" = ["T201", "PLR2004", "PLC0415", "PTH123", "S301"]

[tool.ruff.lint.isort]
known-first-party = ["rcf3"]

[tool.uv]
default-groups = "all"
